# FileWordFinder

./: .gitignore  CMakeLists.txt  CMakePresets.json  File_Finder.sln  LICENSE.txt  README.md
app/: app.cpp
examples/: example_txt.cpp  example_xml.cpp
fileWordFinder/: FileAbstract.cpp  FileAbstract.h  FileAbstract.hpp  FileAll.cpp  FileAll.h  FileAll.hpp  FileHtml.cpp  FileHtml.h  FileHtml.hpp  FileTxt.cpp  FileTxt.h  FileTxt.hpp  FileUserType.cpp  FileUserType.h  FileUserType.hpp  FileXml.cpp  FileXml.h  FileXml.hpp  getDirectoryFiles.h  getDirectoryFiles.hpp  getNotAllDirectoryFiles.h  labi.vcxproj  main.cpp  task.cpp  task.h  workExample.cpp  workExample.hpp
include/: FileAbstract.hpp  FileTxt.hpp  FileXml.hpp  workExample.hpp
labi/: FileAbstract.cpp  FileAbstract.h  FileAll.cpp  FileAll.h  FileHtml.cpp  FileHtml.h  FileTxt.cpp  FileTxt.h  FileUserType.cpp  FileUserType.h  FileXml.cpp  FileXml.h  fff.txt  getDirectoryFiles.h  getNotAllDirectoryFiles.h  labi.vcxproj  labi.vcxproj.filters  main.cpp  task.cpp  task.h
labi/TEST/: testhtml.html  textFile1.txt  word_file.docx
labi/TEST/dir1/: test.xml
lib_include/: FileAbstract.hpp  FileTxt.hpp  FileXml.hpp  Log.hpp  Timer.hpp  getDirectoryFiles.hpp  getNotAllDirectoryFiles.hpp  outResultBase.hpp  outResultTxt.hpp  outResultXml.hpp
lib_src/: FileAbstract.cpp  FileTxt.cpp  FileTxt.hpp  FileXml.cpp  Log.cpp  getDirectoryFiles.cpp  getNotAllDirectoryFiles.cpp  outResultBase.cpp  outResultTxt.cpp  outResultXml.cpp
src/: FileAbstract.cpp  FileAll.cpp  FileTxt.cpp  FileXml.cpp  FileXml.hpp  getDirectoryFiles.cpp  getNotAllDirectoryFiles.cpp  getNotAllDirectoryFiles.hpp  main.cpp  workExample.cpp
src/FileAbstract/: FileAbstract.cpp
src/GetNotAllDirFiles/: getNotAllDirectoryFiles.cpp
test_files/: test_txt1.txt  test_txt2.txt  test_xml2.xml
test_files/test_subdir/: test_sub_txt1.txt  test_sub_txt2.txt  test_sub_xml1.xml  test_sub_xml2.xml
tests/: CMakeLists.txt  test_outResultBase.cpp  test_txt.cpp  test_xml.cpp  xml_txt.cpp
